update saving on payment summary

--- a/src/app/i18n/en.json
+++ b/src/app/i18n/en.json
@@ -252,5 +252,6 @@
   "MODAL_UPDATE_MESSAGE": "Update KlikGO to enjoy our latest app features!",
   "LATER": "Later",
   "NOW_CLOSED": "Now Closed",
-  "OPEN_ON": "Open on"
+  "OPEN_ON": "Open on",
+  "SAVING": "Saving"
 }
