--- a/src/app/i18n/id.json
+++ b/src/app/i18n/id.json
@@ -239,5 +239,6 @@
   "MODAL_UPDATE_MESSAGE": "Perbarui KlikGO untuk menikmati fitur aplikasi terbaru kami!",
   "LATER": "Nanti",
   "NOW_CLOSED": "Sekarang Ditutup",
-  "OPEN_ON": "Buka"
+  "OPEN_ON": "Buka",
+  "SAVING": "Hemat"
 }
