--- a/src/app/i18n/id.json
+++ b/src/app/i18n/id.json
@@ -240,5 +240,8 @@
   "LATER": "Nanti",
   "NOW_CLOSED": "Sekarang Ditutup",
   "OPEN_ON": "Buka",
-  "SAVING": "Hemat"
+  "SAVING": "Hemat",
+  "UPDATE_KLIKGO": "Update KlikGo",
+  "UPDATE_APPS_TITLE": "App Update",
+  "UPDATE_APPS_MESSAGE": "Perbarui KlikGO untuk menikmati fitur-fitur baru, perbaikan bug, peningkatan kinerja, peningkatan, peningkatan kecil"
 }
