--- a/src/app/i18n/id.json
+++ b/src/app/i18n/id.json
@@ -93,7 +93,7 @@
   "ADDRESS_LIST": "Daftar Alamat",
   "ARTICLE": "Artikel",
   "LANGUAGE": "Bahasa",
-  "PRIVACY_POLICY": "Kebijakan Pribadi",
+  "PRIVACY_POLICY": "Kebijakan Privasi",
   "TERMS_CONDITIONS": "Syarat dan Ketentuan",
   "HELP_CENTER": "Pusat Bantuan",
   "UPDATE": "Perbarui",
