--- a/src/app/i18n/en.json
+++ b/src/app/i18n/en.json
@@ -256,5 +256,6 @@
   "SAVING": "Saving",
   "UPDATE_KLIKGO": "Update KlikGo",
   "UPDATE_APPS_TITLE": "App Update",
-  "UPDATE_APPS_MESSAGE": "Update KlikGO to enjoy new features, bug fixes, performance improvements, enhancements, minor improvements"
+  "UPDATE_APPS_MESSAGE": "Update KlikGO to enjoy new features, bug fixes, performance improvements, enhancements, minor improvements",
+  "EDIT" : "Edit"
 }
