Feature/minor UI adjustment (#97)
* feat(address): update address placholder

* feat(wording): klikgo wording titlecase update

* feat(share): share my app scrollable update

* feat(search): filter icon adjustment

* feat(general): remove general titlecase

--- a/src/app/i18n/en.json
+++ b/src/app/i18n/en.json
@@ -24,7 +24,7 @@
   "TODAYS_SPECIAL_DESC": "Everything you need to make today a bit special is right here!",
   "FEATURED_BRAND": "Featured Brand",
   "FEATURED_BRAND_DESC": "Brand loved by everyone",
-  "KLIKGO_ARTICLE": "KlikGo Article",
+  "KLIKGO_ARTICLE": "Klikgo Article",
   "KLIKGO_ARTICLE_DESC": "Be updated with the latest and hottest news!",
   "READ_MORE": "Read More",
   "REGISTER": "Register",
@@ -44,7 +44,7 @@
   "DELIVERY_ADDRESS": "Delivery Address",
   "PIN_LOCATION": "Pin Location",
   "ADDRESS_DETAIL": "Address Detail",
-  "ADDRESS_DETAIL_PLACEHOLDER": "Detail of address, No. Rumah, Blok, RT/RW, etc",
+  "ADDRESS_DETAIL_PLACEHOLDER": "Example : Jalan Raya Boulevard I No 8, RT 1 / RW 2",
   "PROVINCE": "Province",
   "PROVINCE_PLACEHOLDER": "Select Province",
   "CITY": "City",
@@ -141,7 +141,7 @@
   "PROCEED_TO_PAYMENT": "Proceed to Payment",
   "ADD_NEW_ADDRESS": "Add New Address",
   "USE_ADDRESS": "Use Address",
-  "ARTICLE_TITLE": "KlikGO Article",
+  "ARTICLE_TITLE": "Klikgo Article",
   "SELECTED": "Selected",
   "CHOOSE_LOCATION": "Choose Location",
   "SELECT": "Select",
@@ -165,7 +165,7 @@
   "DELIVERY_NOTES": "Delivery Notes",
   "VERIFY_PHONE_NUMBER": "Verify Phone Number",
   "PHONE_NUMBER_VERIFIED": "Your Phone Number is Verified!",
-  "WELCOME_KLIKGO": "Welcome to KlikGo!",
+  "WELCOME_KLIKGO": "Welcome to Klikgo!",
   "VERIFY_EMAIL": "Verify Email",
   "EMAIL_VERIFICATION_SENT": "Email verification sent!",
   "EMAIL_VERIFICATION_WORDING": "We send you a verification message to your email. Please check your email",
@@ -189,7 +189,7 @@
   "VALID_UNTIL": "Valid until",
   "VOUCHER_CODE": "Voucher Code",
   "VALIDITY": "Validity",
-  "SHARE_MESSAGE": "Copy the link below and share KlikGO with your friends!",
+  "SHARE_MESSAGE": "Copy the link below and share Klikgo with your friends!",
   "COPIED_SUCCESS": "Copied successfully",
   "CHAT": "Chat",
   "CHAT_SUBTITLE": "Chat with our Customer Service via WhatsApp!",
@@ -243,19 +243,19 @@
   "CHECK_EMAIL": "Please check your email",
   "SEND_EMAIL": "Send Email",
   "UNDER_MAINTENANCE": "Under Maintenance",
-  "MAINTENANCE_TITLE": "KlikGO Under Maintenance",
-  "MAINTENANCE_MESSAGE": "KlikGO is currently under maintenance. Please close the app and try again a few moments later.",
+  "MAINTENANCE_TITLE": "Klikgo Under Maintenance",
+  "MAINTENANCE_MESSAGE": "Klikgo is currently under maintenance. Please close the app and try again a few moments later.",
   "CLOSE_APP": "Close App",
   "INVALID_TOKEN": "Invalid Token",
   "EMAIL_VERIFIED": "Your Email is Verified!",
   "MODAL_UPDATE_TITLE": "New Update Available",
-  "MODAL_UPDATE_MESSAGE": "Update KlikGO to enjoy our latest app features!",
+  "MODAL_UPDATE_MESSAGE": "Update Klikgo to enjoy our latest app features!",
   "LATER": "Later",
   "NOW_CLOSED": "Now Closed",
   "OPEN_ON": "Open on",
   "SAVING": "Saving",
-  "UPDATE_KLIKGO": "Update KlikGo",
+  "UPDATE_KLIKGO": "Update Klikgo",
   "UPDATE_APPS_TITLE": "App Update",
-  "UPDATE_APPS_MESSAGE": "Update KlikGO to enjoy new features, bug fixes, performance improvements, enhancements, minor improvements",
+  "UPDATE_APPS_MESSAGE": "Update Klikgo to enjoy new features, bug fixes, performance improvements, enhancements, minor improvements",
   "EDIT" : "Edit"
 }
