--- a/src/app/i18n/id.json
+++ b/src/app/i18n/id.json
@@ -23,7 +23,7 @@
   "TODAYS_SPECIAL_DESC": "Semua yang Anda butuhkan untuk membuat hari ini sedikit istimewa ada di sini!",
   "FEATURED_BRAND": "Merek Unggulan",
   "FEATURED_BRAND_DESC": "Merek dicintai oleh semua orang",
-  "KLIKGO_ARTICLE": "Artikel KlikGo",
+  "KLIKGO_ARTICLE": "Artikel Klikgo",
   "KLIKGO_ARTICLE_DESC": "Diperbarui dengan berita terbaru dan terhangat!",
   "READ_MORE": "Selanjutnya",
   "REGISTER": "Daftar",
@@ -43,7 +43,7 @@
   "DELIVERY_ADDRESS": "Alamat Pengiriman",
   "PIN_LOCATION": "Pilih Titik Lokasi",
   "ADDRESS_DETAIL": "Detail Alamat",
-  "ADDRESS_DETAIL_PLACEHOLDER": "Detail Alamat Anda",
+  "ADDRESS_DETAIL_PLACEHOLDER": "Contoh : Jalan Raya Boulevard I No 8, RT 1 / RW 2",
   "PROVINCE": "Provinsi",
   "PROVINCE_PLACEHOLDER": "Pilih Provinsi",
   "CITY": "Kota",
@@ -157,7 +157,7 @@
   "DELIVERY_INFORMATION": "Informasi Pengiriman",
   "VERIFY_PHONE_NUMBER": "Verifikasi Nomor Ponsel",
   "PHONE_NUMBER_VERIFIED": "Nomor Ponsel Anda Telah Terverifikasi",
-  "WELCOME_KLIKGO": "Selamat Datang di KlikGo!",
+  "WELCOME_KLIKGO": "Selamat Datang di Klikgo!",
   "VERIFY_EMAIL": "Verifikasi Email",
   "EMAIL_VERIFICATION_SENT": "Email verifikasi terkirim!",
   "EMAIL_VERIFICATION_WORDING": "Kami telah mengiriman pesan verifikasi ke email Anda. Silahkan cek email Anda",
@@ -180,7 +180,7 @@
   "VALID_UNTIL": "Berlaku hingga",
   "VOUCHER_CODE": "Kode Voucher",
   "VALIDITY": "Masa Berlaku",
-  "SHARE_MESSAGE": "Salin tautan di bawah dan bagikan KlikGO dengan teman-teman Anda!",
+  "SHARE_MESSAGE": "Salin tautan di bawah dan bagikan Klikgo dengan teman-teman Anda!",
   "COPIED_SUCCESS": "Berhasil disalin",
   "CHAT": "Chat",
   "CHAT_SUBTITLE": "Ngobrol dengan Layanan Pelanggan kami melalui WhatsApp!",
@@ -232,19 +232,19 @@
   "CHECK_EMAIL": "Mohon cek email anda",
   "SEND_EMAIL": "Kirim Email",
   "UNDER_MAINTENANCE": "Dalam Pemeliharaan",
-  "MAINTENANCE_TITLE": "KlikGO Dalam Pemeliharaan",
-  "MAINTENANCE_MESSAGE": "KlikGO saat ini sedang dalam pemeliharaan. Harap tutup aplikasi dan coba lagi beberapa saat kemudian.",
+  "MAINTENANCE_TITLE": "Klikgo Dalam Pemeliharaan",
+  "MAINTENANCE_MESSAGE": "Klikgo saat ini sedang dalam pemeliharaan. Harap tutup aplikasi dan coba lagi beberapa saat kemudian.",
   "CLOSE_APP": "Tutup Aplikasi",
   "INVALID_TOKEN": "Token tidak valid",
   "EMAIL_VERIFIED": "Email Anda Telah Terverifikasi",
   "MODAL_UPDATE_TITLE": "Pembaruan Baru Tersedia",
-  "MODAL_UPDATE_MESSAGE": "Perbarui KlikGO untuk menikmati fitur aplikasi terbaru kami!",
+  "MODAL_UPDATE_MESSAGE": "Perbarui Klikgo untuk menikmati fitur aplikasi terbaru kami!",
   "LATER": "Nanti",
   "NOW_CLOSED": "Sekarang Ditutup",
   "OPEN_ON": "Buka",
   "SAVING": "Hemat",
-  "UPDATE_KLIKGO": "Update KlikGo",
+  "UPDATE_KLIKGO": "Update Klikgo",
   "UPDATE_APPS_TITLE": "App Update",
-  "UPDATE_APPS_MESSAGE": "Perbarui KlikGO untuk menikmati fitur-fitur baru, perbaikan bug, peningkatan kinerja, peningkatan, peningkatan kecil",
+  "UPDATE_APPS_MESSAGE": "Perbarui Klikgo untuk menikmati fitur-fitur baru, perbaikan bug, peningkatan kinerja, peningkatan, peningkatan kecil",
   "EDIT" : "Ubah"
 }
