Cut Off Phase 1 (#101)
* fix responsive on card product

* fix calculate price when date is changed

* add popover for delivery info on checkout page

* add on fetch on cod & manual transfer process button

* adjust search & scan icon

* feat(titlecase): remove brand, category, product titlecase

* change filter color icon on search page

* feat(maps-search): add input search

* fix rotation when upload profile picture

* chore(log): remove console log

* feat(gmap): update api key

* update popover text size

* reset time active when schedule changed

* fix delivery info text

* recall schedule api when change delivery

* remove outline from input focus

* change icon delivery info

* update toast text when price updated

* add handling push notification

* feat(brand): add conditional brand banner

* fix css voucher & datepicker

* Workaround modal

Co-authored-by: Indra Abdulah <indra.abdullah99@gmail.com>
Co-authored-by: Jason <jasonjaputra@gmail.com>

--- a/src/app/i18n/en.json
+++ b/src/app/i18n/en.json
@@ -257,5 +257,8 @@
   "UPDATE_KLIKGO": "Update Klikgo",
   "UPDATE_APPS_TITLE": "App Update",
   "UPDATE_APPS_MESSAGE": "Update Klikgo to enjoy new features, bug fixes, performance improvements, enhancements, minor improvements",
-  "EDIT" : "Edit"
+  "EDIT": "Edit",
+  "PRICE_UPDATED": "Delivery fee has been adjusted",
+  "DELIVERY_LATER_INFO": "Your order will proceed for delivery within the soonest available or preferred selected date and time range.",
+  "DELIVERY_NOW_INFO": "Your order will proceed for delivery immediately once order preparation is completed. Order is estimated to arrive within less than 45 mins under normal traffic condition."
 }
