Feature/phase 2 UI (#103)
* add card loyalty point to homepage

* implement UI loyalty poin page

* implement ui loyalty poin history

* implement voucher point list & detail

* add confirmation modal to buy voucher point

* implement modal success buy voucher point

* implement fix buy voucher point success modal

* implement ui tag product

* add on error img load

* implement get point

* implement voucher point list

* implement api history point

* implement product tag

* implement api buy voucher

* implement sub category

* fix redeem history point

* fix loyalty css

* fix loyalty header, back button subcategory & fetch product sub category

* fix back button & product name

* fix css text subcategory

* implement select branch

* add placeholder img for product & category

* add tag to product detail

* add payment icon to payment list

* fix calculate price when date changed

* add titlecase to product name

* fix select address on checkout page

* fix bug back button on scan qr

* change label discount to promo

* fix backbutton on checkout page

* add params long lat to branch list

* add timezone to params

* fix set token & get error message on set password

* fix feedback phase 2

* update app icon & splash screen

* fix broken image on inbox detail

* fix footer on product list, adjust icon size on homepage, fix toast when voucher applied

* change package name & wording how to manual transfer

* fix translation close otp modal

--- a/src/app/i18n/en.json
+++ b/src/app/i18n/en.json
@@ -74,7 +74,7 @@
   "VERIFY_EMAIL_BODY": "You will get an extra point whenever you verify your email. Verify now?",
   "SKIP": "Skip",
   "VERIFY": "Verify",
-  "CLOSE_CONFIRM": "Are you sure you want to close this modal?",
+  "CLOSE_CONFIRM": "Are you sure you want to skip verification?",
   "CANCEL": "Cancel",
   "OTP_WORDING": "Please enter OTP code that has been sent to your phone",
   "RESEND_OTP": "Resend OTP",
